# RavensPedia

./: .gitignore  Dockerfile  README.md  alembic.ini  main.py  pyproject.toml
.github/workflows/: run_tests.yml
alembic/: env.py
alembic/versions/: 2025_01_07_1647-f3ac5972f255_create_all_tables.py  2025_01_07_1831-991b058ba01a_create_all_tables.py  2025_01_07_2313-9d4b29c9d504_create_all_tables.py  2025_01_10_1711-110623a4ccd8_create_all_tables.py  2025_01_10_2018-d8e212c8b6f8_team_id_can_be_none.py  2025_01_10_2230-ecb0211fe58b_add_constants_for_max_number_of_teams_.py  2025_01_10_2346-853f042101cd_add_constant_for_max_number_of_players_.py  2025_01_11_0042-7a487de501ea_add_constant_for_max_number_of_teams_in_.py  2025_01_15_0045-c7dd83f232dd_add_colums_with_ids_for_table_player.py  2025_01_15_1744-c01fb92bb140_link_player_stats_match_player.py  2025_01_15_1837-2c410a0f465a_add_column_best_of.py  2025_01_18_2308-4189707c05d9_change_table_stats.py  2025_01_22_2142-ea4c8abd0373_add_status_of_match.py  2025_01_22_2316-e77f13b7dbc6_add_fields_in_tabletournament.py  2025_01_25_1743-fe4473925a62_create_users_table.py  2025_02_02_0138-dba89c2a6c63_create_tokens_table.py  2025_02_02_1636-fa9c58e0a7eb_add_fields_in_tokens_table.py  2025_03_26_1834-7988c2f590db_replace_bool_roles_with_enum.py  2025_03_27_0150-2a234daf2326_add_news_table.py  2025_03_27_0228-4c0b47674b8b_add_news_table.py  2025_03_27_2040-c48016527adf_add_match_info_tables.py  2025_03_28_0052-27ed4dd23ea9_add_match_info_tables.py  2025_03_29_0007-81c39e9e8ac6_add_teams_map_stats_table.py  2025_04_01_1436-28bf4629ec22_add_fields_for_elo.py  2025_04_03_1742-c099b13ae592_add_table_tournament_results.py  2025_04_08_0139-c6aecb49c031_add_field_original_sourse.py
api_v1/: __init__.py
api_v1/match/: crud.py  dependencies.py  scheme.py  views.py
api_v1/player/: crud.py  dependencies.py  scheme.py  views.py
api_v1/project_classes/: __init__.py
api_v1/team/: crud.py  dependencies.py  scheme.py  (+1 more)
core/: __init__.py  config.py  db_helper.py
ravenspedia/: main.py
schemes/: __init__.py
tests/: conftest.py  test_auth_views.py  test_match_info_views.py  test_match_manager_views.py  test_match_views.py  test_matches_stats_views.py  test_news_views.py  test_player_stats_views.py  test_player_views.py  test_schedule_views.py  test_search_views.py  test_stats_from_faceit.py  test_team_manager_views.py  test_team_stats_views.py  test_team_views.py  test_tournament_views.py  test_tournaments_manager_views.py
unit_tests/: conftest.py  test_team_views.py
(+171 files in other folders)
