[tool.poetry]
name = "RavensPedia"
version = "0.1.0"
description = ""
authors = ["Zattox <vladcsgoogurechik@mail.ru>"]
license = "CyberRavens"
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.12"
fastapi = ">0.108.0"
uvicorn = { extras = ["standard"], version = "^0.34.0" }
pydantic = { extras = ["email"], version = "^2.10.4" }
sqlalchemy = { extras = ["asyncio"], version = ">2.0.25" }
aiosqlite = "^0.20.0"
pydantic-settings = ">2.1.0"
alembic = ">1.13.1"
sqlalchemy-utils = "^0.41.2"
requests = "^2.32.3"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"