[tool.poetry]
name = "ravenspedia"
version = "0.1.0"
description = ""
authors = ["Zattox <vladcsgoogurechik@mail.ru>"]
license = "CyberRavens"
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.12"
fastapi = ">0.108.0"
uvicorn = { extras = ["standard"], version = "^0.34.0" }
pydantic = { extras = ["email"], version = "^2.10.4" }
sqlalchemy = { extras = ["asyncio"], version = ">2.0.25" }
aiosqlite = "^0.20.0"
pydantic-settings = ">2.1.0"
alembic = ">1.13.1"
sqlalchemy-utils = "^0.41.2"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
httpx = "^0.28.1"
pytest = "^8.3.4"
pytest-asyncio = "^0.25.2"
deepdiff = "^8.1.1"
pyjwt = {extras = ["crypto"], version = "^2.10.1"}
bcrypt = "^4.2.1"
python-multipart = "^0.0.20"
apscheduler = "^3.11.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
black = "^24.10.0"
pytest-asyncio = "^0.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning:pydantic.*"]